# rs-actor-boids

./: Cargo.toml
src/: actor.rs  boid.rs  boid_manager.rs  lib.rs  main.rs  world.rs
